opam-version: "2.0"
maintainer: "owlbarn"
authors: [ "Liang Wang" ]
license: "MIT"
homepage: "https://github.com/owlbarn/owl-onnx"
dev-repo: "git+https://github.com/owlbarn/owl-onnx.git"
bug-reports: "https://github.com/owlbarn/owl-onnx/issues"
doc: "https://owlbarn.github.io/owl-onnx/owl-onnx"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "1.5.0"}
  "owl-base" {>= "0.6.0"}
  "integers" {with-test}
  "ocaml-protoc" {with-test}
  "alcotest" {with-test}
]
synopsis: "Owl's Symbolic Library"
